[package]
name = "sandbox"
version = "0.1.0"

[dependencies]
log = "0.4"
cfg-if = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
futures = "0.1"
tokio-reactor = "0.1"
tokio-current-thread = "0.1"
sandbox-ipc = { git = "https://github.com/JohnColanduoni/sandbox-ipc" }

[target.'cfg(target_os = "windows")'.dependencies]
crsio2 = { git = "https://github.com/JohnColanduoni/crsio2", version = "0.1.1" }
winapi = { version = "0.3" }
winhandle = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
env_logger = "0.5"
uuid = { version = "0.6", features = ["v4"] }
rand = "0.5"

[[test]]
name = "compute_only"
harness = false